examples/test/testpolicy15821.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15821
  namespace: namespace429
spec:
  podSelector:
    matchLabels:
      key49: value40
      key26: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value8
          key5: value38
      podSelector:
        matchLabels:
          key23: value3
          key18: value28
